FIX: Added z-index to move cart behind and not interrupt click functions

--- a/src/assets/css/views/Menu/MenuComponents/Cart.scss
+++ b/src/assets/css/views/Menu/MenuComponents/Cart.scss
@@ -6,8 +6,10 @@
   width: 100vw;
   height: 100vh;
   opacity: 0;
+  z-index: -10;
   
   &.-activeCart {
     opacity: 1;
+    z-index: 10;
   }
 }
